test/analyzer/input_programs/invalid_programs/program02.tea
# arithmetic operations must have int/float operands
5 * 'a'